# ocle

./: CMakeLists.txt  ocle.cl  test.cpp
include/: AES.hpp  Base.hpp  Error.hpp  ocle.hpp
src/: AES.cpp  Base.cpp  ocle.cpp
